Auto-generating HTTP clients from Swagger files
