# product-api/handlers/delete.go
@@ -6,14 +6,16 @@ import (
 )
 
 // swagger:route DELETE /products/{id} products deleteProduct
-// Returns a list of products
+// Update a products details
+//
 // responses:
-//	201: noContent
+//	201: noContentResponse
 //  404: errorResponse
 //  501: errorResponse
 
 // Delete handles DELETE requests and removes items from the database
 func (p *Products) Delete(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] deleting record id", id)
