# product-api/handlers/get.go
@@ -5,7 +5,7 @@ import (
 	"net/http"
 )
 
-// swagger:route GET /products  listProducts
+// swagger:route GET /products products listProducts
 // Return a list of products from the database
 // responses:
 //	200: productsResponse
@@ -13,6 +13,7 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
+	rw.Header().Add("Content-Type", "application/json")
 
 	prods := data.GetProducts()
 
@@ -23,7 +24,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -31,6 +32,8 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 
 // ListSingle handles GET requests
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
+	rw.Header().Add("Content-Type", "application/json")
+
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] get record id", id)
