# product-api/swagger.yaml
@@ -68,6 +68,8 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+      tags:
+      - products
     post:
       description: Create a new product
       operationId: createProduct
@@ -101,6 +103,20 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Update a products details
+      operationId: deleteProduct
+      parameters:
       - description: The id of the product for which the operation relates
         format: int64
         in: path
@@ -113,26 +129,21 @@ paths:
           $ref: '#/responses/noContentResponse'
         "404":
           $ref: '#/responses/errorResponse'
-        "422":
-          $ref: '#/responses/errorValidation'
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      description: Returns a list of products
-      operationId: deleteProduct
-      responses:
-        "201":
-          $ref: '#/responses/noContent'
-        "404":
-          $ref: '#/responses/errorResponse'
         "501":
           $ref: '#/responses/errorResponse'
       tags:
       - products
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
